# fibonacci-rabbits

./: CMakeLists.txt  Doxyfile  README.md  deps.h  fcheck.py  grower.sh  makefile  makefile.def  phi.sh  rabbit-seq.cpp
apps/: CMakeLists.txt  rabbit-seq.cpp
docs/: CMakeLists.txt  mainpage.md
include/: ctx.h  deps.h  generators.h  generators.hpp  processor.h  processor.hpp  rabbits.h  rabbits.hpp
src/: CMakeLists.txt  ctx.cpp  generators.cpp  processor.cpp
tests/: CMakeLists.txt  testlib.cpp
